--- a/tablepaste.html
+++ b/tablepaste.html
@@ -187,5 +187,6 @@ function getElementsByTagName(node, tagName)
   <div id="html1" contentEditable="true" onkeydown="setTimeout(invert, 10);">HTML edit</div>
   <hr />
   <p>Recommend: Chrome or Firefox</p>
+<p>Copyright 2015 Yukinari Toyota / github.com/t-yuki @sey</p>
 </body>
 </html>
